Added shared preferences to get real temperature

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-MyOpenWeatherMapApiKey="Enter your api key here"
+MyOpenWeatherMapApiKey="c093671796d3e090c68d9b907de3624a"
 
 # Project-wide Gradle settings.
 
