--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-MyOpenWeatherMapApiKey="c093671796d3e090c68d9b907de3624a"
+MyOpenWeatherMapApiKey="Your api key comes here"
 
 # Project-wide Gradle settings.
 
