--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
                 android:value="com.arunditti.android.myapplication.MainActivity" />
         </activity>
 
+        <provider
+            android:authorities="com.arunditti.android.myapplication"
+            android:name=".data.WeatherProvider" />
+
     </application>
 
 </manifest>
